Source/WebCore/rendering/RenderQuote.cpp
@@ -256,17 +256,12 @@ void RenderQuote::computePreferredLogicalWidths(float lead)
     // the render tree then. When that's done, we also won't need to override
     // computePreferredLogicalWidths at all.
     // https://bugs.webkit.org/show_bug.cgi?id=104829
-    bool oldSetNeedsLayoutIsForbidden = isSetNeedsLayoutForbidden();
-    setNeedsLayoutIsForbidden(false);
+    SetLayoutNeededForbiddenScope layoutForbiddenScope(this, false);
 #endif
 
     if (!m_attached)
         attachQuote();
     setTextInternal(originalText());
-
-#ifndef NDEBUG
-    setNeedsLayoutIsForbidden(oldSetNeedsLayoutIsForbidden);
-#endif
 
     RenderText::computePreferredLogicalWidths(lead);
 }
