Source/WebCore/rendering/mathml/RenderMathMLOperator.cpp
@@ -85,18 +85,13 @@ void RenderMathMLOperator::computePreferredLogicalWidths()
     ASSERT(preferredLogicalWidthsDirty());
 
 #ifndef NDEBUG
-    // FIXME: Remove the setNeedsLayoutIsForbidden calls once mathml stops modifying the render tree here.
-    bool oldSetNeedsLayoutIsForbidden = isSetNeedsLayoutForbidden();
-    setNeedsLayoutIsForbidden(false);
+    // FIXME: Remove this once mathml stops modifying the render tree here.
+    SetLayoutNeededForbiddenScope layoutForbiddenScope(this, false);
 #endif
     
     // Check for an uninitialized operator.
     if (!firstChild())
         updateFromElement();
-
-#ifndef NDEBUG
-    setNeedsLayoutIsForbidden(oldSetNeedsLayoutIsForbidden);
-#endif
 
     RenderMathMLBlock::computePreferredLogicalWidths();
 }
