Source/WebCore/rendering/mathml/RenderMathMLRoot.cpp
@@ -188,9 +188,8 @@ void RenderMathMLRoot::computePreferredLogicalWidths()
     ASSERT(preferredLogicalWidthsDirty() && needsLayout());
     
 #ifndef NDEBUG
-    // FIXME: Remove the setNeedsLayoutIsForbidden calls once mathml stops modifying the render tree here.
-    bool oldSetNeedsLayoutIsForbidden = isSetNeedsLayoutForbidden();
-    setNeedsLayoutIsForbidden(false);
+    // FIXME: Remove this once mathml stops modifying the render tree here.
+    SetLayoutNeededForbiddenScope layoutForbiddenScope(this, false);
 #endif
     
     computeChildrenPreferredLogicalHeights();
@@ -225,10 +224,6 @@ void RenderMathMLRoot::computePreferredLogicalWidths()
             m_indexTop = - rootExtraTop;
     } else
         m_intrinsicPaddingStart = frontWidth;
-
-#ifndef NDEBUG
-    setNeedsLayoutIsForbidden(oldSetNeedsLayoutIsForbidden);
-#endif
 
     RenderMathMLBlock::computePreferredLogicalWidths();
     
